--- a/src/components/CardButton/CardButton.css
+++ b/src/components/CardButton/CardButton.css
@@ -1,7 +1,7 @@
 .card-button {
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 0.03);
-  color: black;
+  color: white;
   padding: 20px;
   border: none;
   cursor: pointer;
