--- a/src/components/JournalForm/JournalForm.module.css
+++ b/src/components/JournalForm/JournalForm.module.css
@@ -4,7 +4,7 @@
   gap: 30px;
 }
 
-/* .input-title {
+.input-title {
   border: none;
   background: none;
   font-size: 32px;
@@ -14,12 +14,12 @@
   border-bottom: 2px solid #6e6c6c;
   color: rgb(248, 240, 224);
   width: 100%;
-} */
+}
 
 .form-row {
   display: flex;
   align-items: center;
-  gap: 45px;
+  gap: 30px;
 }
 
 .form-label {
@@ -43,6 +43,7 @@
 
 .invalid {
   border: 1px solid red;
+  border-radius: 8px;
   background-color: rgb(233, 138, 138);
 }
 
